// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch tests all variants should match snapshot disabled 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-3 >* {
  margin-left: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-2 >*:not(:first-child) {
  margin-top: 0rem;
}

.emotion-0 {
  background: #B9B9B9;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  cursor: pointer;
  margin: unset;
  border-radius: 6.25rem;
  height: 1.25rem;
  width: 2.25rem;
}

.emotion-0:disabled {
  background: #E6E6E6;
  border: 1px solid #747474;
  color: #747474;
  cursor: not-allowed;
}

.emotion-0:hover {
  background: #747474;
}

.emotion-0:active {
  background: #38853C;
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #DDDDDD;
  background: #747474;
}

.emotion-0:focus:hover {
  background: #747474;
}

.emotion-0:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #B9B9B9;
}

.emotion-0:focus:not([data-focus-visible-added]):hover {
  background: #747474;
}

.emotion-0:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}

.emotion-0:checked {
  background: #38853C;
}

.emotion-0:checked:disabled {
  cursor: not-allowed;
  background: #E6E6E6;
  border: 1px solid #747474;
}

.emotion-0:checked:hover {
  background: #285F2B;
}

.emotion-0:checked:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #AEDDB0;
  background: #285F2B;
}

.emotion-0:checked:focus:hover {
  background: #285F2B;
}

.emotion-0:checked:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #38853C;
}

.emotion-0:checked:focus:not([data-focus-visible-added]):hover {
  background: #285F2B;
}

.emotion-0:checked:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}



.emotion-0:checked:checked:after {
  -webkit-transform: translateX(1rem);
  -moz-transform: translateX(1rem);
  -ms-transform: translateX(1rem);
  transform: translateX(1rem);
}



.emotion-0:checked:disabled:after {
  background: #747474;
  margin: 0.2rem;
}



.emotion-0:disabled:after {
  background: #747474;
  margin: 0.2rem;
}

.emotion-0:after {
  background: #FFFFFF;
  content: "";
  display: block;
  position: absolute;
  border-radius: 1.25rem;
  -webkit-transition: -webkit-transform .25s ease;
  transition: transform .25s ease;
}

.emotion-1 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  color: #545454;
}

<div
    class="emotion-3"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-label="label2"
      class="emotion-0"
      disabled=""
      role="switch"
      style="pointer-events: none;"
      type="checkbox"
    />
    <div
      class="emotion-2"
    >
      <label
        class="emotion-1"
      >
        Label
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch tests all variants should match snapshot label only 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-3 >* {
  margin-left: 0.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-2 >*:not(:first-child) {
  margin-top: 0rem;
}

.emotion-1 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  color: #000000;
}

.emotion-0 {
  background: #B9B9B9;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  cursor: pointer;
  margin: unset;
  border-radius: 6.25rem;
  height: 1.25rem;
  width: 2.25rem;
}

.emotion-0:disabled {
  background: #E6E6E6;
  border: 1px solid #747474;
  color: #747474;
  cursor: not-allowed;
}

.emotion-0:hover {
  background: #747474;
}

.emotion-0:active {
  background: #38853C;
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #DDDDDD;
  background: #747474;
}

.emotion-0:focus:hover {
  background: #747474;
}

.emotion-0:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #B9B9B9;
}

.emotion-0:focus:not([data-focus-visible-added]):hover {
  background: #747474;
}

.emotion-0:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}

.emotion-0:checked {
  background: #38853C;
}

.emotion-0:checked:disabled {
  cursor: not-allowed;
  background: #E6E6E6;
  border: 1px solid #747474;
}

.emotion-0:checked:hover {
  background: #285F2B;
}

.emotion-0:checked:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #AEDDB0;
  background: #285F2B;
}

.emotion-0:checked:focus:hover {
  background: #285F2B;
}

.emotion-0:checked:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #38853C;
}

.emotion-0:checked:focus:not([data-focus-visible-added]):hover {
  background: #285F2B;
}

.emotion-0:checked:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}



.emotion-0:checked:checked:after {
  -webkit-transform: translateX(1rem);
  -moz-transform: translateX(1rem);
  -ms-transform: translateX(1rem);
  transform: translateX(1rem);
}



.emotion-0:checked:disabled:after {
  background: #747474;
  margin: 0.2rem;
}



.emotion-0:disabled:after {
  background: #747474;
  margin: 0.2rem;
}

.emotion-0:after {
  background: #FFFFFF;
  content: "";
  display: block;
  position: absolute;
  border-radius: 1.25rem;
  -webkit-transition: -webkit-transform .25s ease;
  transition: transform .25s ease;
}

<div
    class="emotion-3"
  >
    <input
      aria-checked="false"
      aria-label="toggle"
      class="emotion-0"
      role="switch"
      type="checkbox"
      value="toggle"
    />
    <div
      class="emotion-2"
    >
      <label
        class="emotion-1"
      >
        Label
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch tests all variants should match snapshot with error text 1`] = `
<DocumentFragment>
  .emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 >* {
  margin-left: 0.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-3 >*:not(:first-child) {
  margin-top: 0rem;
}

.emotion-1 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  color: #000000;
}

.emotion-0 {
  background: #B9B9B9;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  cursor: pointer;
  margin: unset;
  border-radius: 6.25rem;
  height: 1.25rem;
  width: 2.25rem;
}

.emotion-0:disabled {
  background: #E6E6E6;
  border: 1px solid #747474;
  color: #747474;
  cursor: not-allowed;
}

.emotion-0:hover {
  background: #747474;
}

.emotion-0:active {
  background: #38853C;
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #DDDDDD;
  background: #747474;
}

.emotion-0:focus:hover {
  background: #747474;
}

.emotion-0:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #B9B9B9;
}

.emotion-0:focus:not([data-focus-visible-added]):hover {
  background: #747474;
}

.emotion-0:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}

.emotion-0:checked {
  background: #38853C;
}

.emotion-0:checked:disabled {
  cursor: not-allowed;
  background: #E6E6E6;
  border: 1px solid #747474;
}

.emotion-0:checked:hover {
  background: #285F2B;
}

.emotion-0:checked:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #AEDDB0;
  background: #285F2B;
}

.emotion-0:checked:focus:hover {
  background: #285F2B;
}

.emotion-0:checked:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #38853C;
}

.emotion-0:checked:focus:not([data-focus-visible-added]):hover {
  background: #285F2B;
}

.emotion-0:checked:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}



.emotion-0:checked:checked:after {
  -webkit-transform: translateX(1rem);
  -moz-transform: translateX(1rem);
  -ms-transform: translateX(1rem);
  transform: translateX(1rem);
}



.emotion-0:checked:disabled:after {
  background: #747474;
  margin: 0.2rem;
}



.emotion-0:disabled:after {
  background: #747474;
  margin: 0.2rem;
}

.emotion-0:after {
  background: #FFFFFF;
  content: "";
  display: block;
  position: absolute;
  border-radius: 1.25rem;
  -webkit-transition: -webkit-transform .25s ease;
  transition: transform .25s ease;
}

.emotion-2 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.75rem;
  line-height: 1.3333333333;
  letter-spacing: 0.001em;
  color: #CC3D3D;
}

<div
    class="emotion-5"
  >
    <input
      aria-checked="false"
      aria-label="label3"
      class="emotion-0"
      role="switch"
      type="checkbox"
      value="switch3"
    />
    <div
      class="emotion-3"
    >
      <label
        class="emotion-1"
      >
        Label
      </label>
      <div
        class="emotion-3"
      >
        <span
          class="emotion-2"
        >
          Error text
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch tests all variants should match snapshot with help and error texts 1`] = `
<DocumentFragment>
  .emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-7 >* {
  margin-left: 0.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-3 >*:not(:first-child) {
  margin-top: 0rem;
}

.emotion-1 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  color: #000000;
}

.emotion-0 {
  background: #B9B9B9;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  cursor: pointer;
  margin: unset;
  border-radius: 6.25rem;
  height: 1.25rem;
  width: 2.25rem;
}

.emotion-0:disabled {
  background: #E6E6E6;
  border: 1px solid #747474;
  color: #747474;
  cursor: not-allowed;
}

.emotion-0:hover {
  background: #747474;
}

.emotion-0:active {
  background: #38853C;
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #DDDDDD;
  background: #747474;
}

.emotion-0:focus:hover {
  background: #747474;
}

.emotion-0:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #B9B9B9;
}

.emotion-0:focus:not([data-focus-visible-added]):hover {
  background: #747474;
}

.emotion-0:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}

.emotion-0:checked {
  background: #38853C;
}

.emotion-0:checked:disabled {
  cursor: not-allowed;
  background: #E6E6E6;
  border: 1px solid #747474;
}

.emotion-0:checked:hover {
  background: #285F2B;
}

.emotion-0:checked:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #AEDDB0;
  background: #285F2B;
}

.emotion-0:checked:focus:hover {
  background: #285F2B;
}

.emotion-0:checked:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #38853C;
}

.emotion-0:checked:focus:not([data-focus-visible-added]):hover {
  background: #285F2B;
}

.emotion-0:checked:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}



.emotion-0:checked:checked:after {
  -webkit-transform: translateX(1rem);
  -moz-transform: translateX(1rem);
  -ms-transform: translateX(1rem);
  transform: translateX(1rem);
}



.emotion-0:checked:disabled:after {
  background: #747474;
  margin: 0.2rem;
}



.emotion-0:disabled:after {
  background: #747474;
  margin: 0.2rem;
}

.emotion-0:after {
  background: #FFFFFF;
  content: "";
  display: block;
  position: absolute;
  border-radius: 1.25rem;
  -webkit-transition: -webkit-transform .25s ease;
  transition: transform .25s ease;
}

.emotion-4 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.75rem;
  line-height: 1.3333333333;
  letter-spacing: 0.001em;
  color: #CC3D3D;
}

.emotion-2 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.75rem;
  line-height: 1.3333333333;
  letter-spacing: 0.001em;
  color: #545454;
}

<div
    class="emotion-7"
  >
    <input
      aria-checked="true"
      aria-label="label2"
      checked=""
      class="emotion-0"
      role="switch"
      type="checkbox"
    />
    <div
      class="emotion-3"
    >
      <label
        class="emotion-1"
      >
        Label
      </label>
      <div
        class="emotion-3"
      >
        <span
          class="emotion-2"
        >
          Help text
        </span>
      </div>
      <div
        class="emotion-3"
      >
        <span
          class="emotion-4"
        >
          Error text
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch tests all variants should match snapshot with help text 1`] = `
<DocumentFragment>
  .emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 >* {
  margin-left: 0.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-3 >*:not(:first-child) {
  margin-top: 0rem;
}

.emotion-1 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: -0.0009em;
  color: #000000;
}

.emotion-0 {
  background: #B9B9B9;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  position: relative;
  cursor: pointer;
  margin: unset;
  border-radius: 6.25rem;
  height: 1.25rem;
  width: 2.25rem;
}

.emotion-0:disabled {
  background: #E6E6E6;
  border: 1px solid #747474;
  color: #747474;
  cursor: not-allowed;
}

.emotion-0:hover {
  background: #747474;
}

.emotion-0:active {
  background: #38853C;
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #DDDDDD;
  background: #747474;
}

.emotion-0:focus:hover {
  background: #747474;
}

.emotion-0:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #B9B9B9;
}

.emotion-0:focus:not([data-focus-visible-added]):hover {
  background: #747474;
}

.emotion-0:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}

.emotion-0:checked {
  background: #38853C;
}

.emotion-0:checked:disabled {
  cursor: not-allowed;
  background: #E6E6E6;
  border: 1px solid #747474;
}

.emotion-0:checked:hover {
  background: #285F2B;
}

.emotion-0:checked:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #AEDDB0;
  background: #285F2B;
}

.emotion-0:checked:focus:hover {
  background: #285F2B;
}

.emotion-0:checked:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
  background: #38853C;
}

.emotion-0:checked:focus:not([data-focus-visible-added]):hover {
  background: #285F2B;
}

.emotion-0:checked:after {
  width: 0.75rem;
  height: 0.75rem;
  margin: 0.25rem;
}



.emotion-0:checked:checked:after {
  -webkit-transform: translateX(1rem);
  -moz-transform: translateX(1rem);
  -ms-transform: translateX(1rem);
  transform: translateX(1rem);
}



.emotion-0:checked:disabled:after {
  background: #747474;
  margin: 0.2rem;
}



.emotion-0:disabled:after {
  background: #747474;
  margin: 0.2rem;
}

.emotion-0:after {
  background: #FFFFFF;
  content: "";
  display: block;
  position: absolute;
  border-radius: 1.25rem;
  -webkit-transition: -webkit-transform .25s ease;
  transition: transform .25s ease;
}

.emotion-2 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 0.75rem;
  line-height: 1.3333333333;
  letter-spacing: 0.001em;
  color: #545454;
}

<div
    class="emotion-5"
  >
    <input
      aria-checked="false"
      aria-label="label3"
      class="emotion-0"
      role="switch"
      type="checkbox"
      value="switch3"
    />
    <div
      class="emotion-3"
    >
      <label
        class="emotion-1"
      >
        Label
      </label>
      <div
        class="emotion-3"
      >
        <span
          class="emotion-2"
        >
          Help text
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
